# absenteeism-etl-pipeline

./: 404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
api/etl_absenteeism/: index.html
api/main/: index.html
data/processed/: absenteeism_data_20250919_232945.xlsx  absenteeism_data_20250919_233044.xlsx  absenteeism_data_20250919_235118.xlsx
docs/: index.md  tests.md
docs/api/: etl_absenteeism.md  main.md
docs/modules/: etl.md  main.md
modules/etl/: index.html
modules/main/: index.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/etl_absenteeism/: index.html
site/api/main/: index.html
site/modules/etl/: index.html
site/modules/main/: index.html
site/search/: search_index.json
site/tests/: index.html
src/etl/: __init__.py  etl_absenteeism.py
tests/: test_etl.py
