[project]
name = "absenteeism-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blue>=0.9.1",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydocstyle>=6.3.0",
    "pytest>=8.4.2",
    "taskipy>=1.12.2",
]

[tool.taskipy.tasks]
format = "uv run blue . && uv run isort . && uv run pydocstyle ."
test = "uv run pytest"
run = "uv run main.py"
docs-serve = "uv run mkdocs serve"
docs-build = "uv run mkdocs build"
